--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
       <div class="row gy-4">
         <div class="col-lg-6 position-relative align-self-start order-lg-last order-first">
-          <img src="assets/img/logo.png" class="img-fluid aboutImg" alt="">
+          <img src="assets/img/main.jpg" class="img-fluid aboutImg" alt="">
         
         </div>
         <div class="col-lg-6 content order-last  order-lg-first">
@@ -261,7 +261,7 @@
               <li><i class="bi bi-check-circle"></i> <span data-translate="cargotrans1">Տենտ բեռնատարներ</span></li>
               <li><i class="bi bi-check-circle"></i> <span data-translate="cargotrans2">Սառնարան բեռնատարներ</span></li>
               <li><i class="bi bi-check-circle"></i> <span data-translate="cargotrans3">Թերմոս բեռնատարներ</span></li>
-              <li><i class="bi bi-check-circle"></i> <span data-translate="cargotrans4">120մ3 ծավալով բեռնատարներ</span></li>
+              <li><i class="bi bi-check-circle"></i> <span data-translate="cargotrans4">120 մ³ ծավալով բեռնատարներ</span></li>
               <li><i class="bi bi-check-circle"></i> <span data-translate="cargotrans5">Վտանգավոր (ADR) բեռների փոխադրում</span></li>
               <li><i class="bi bi-check-circle"></i> <span data-translate="cargotrans6">Ալկոհոլային խմիչքների փոխադրում</span></li>
             </ul>     
@@ -345,14 +345,6 @@
                   <input type="text" name="city" class="form-control" placeholder="Քաղաք" required>
                 </div>
 
-                <div class="col-md-6">
-                  <input type="text" name="weight" class="form-control" placeholder="Քաշ (կգ)" required>
-                </div>
-
-                <div class="col-md-6">
-                  <input type="text" name="dimensions" class="form-control" placeholder="Ծավալ (մ³)" required>
-                </div>
-
                 <div class="col-lg-12">
                   <h4 data-translate="personalData">Անձնական Տվյալներ</h4>
                 </div>
@@ -428,7 +420,7 @@
               <i class="bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h4 data-translate="address">Հասցե`</h4>
-                <p data-translate="addressStreet">Քեռու 75, Ք․ Երևան</p>
+                <p data-translate="addressStreet">Քեռու 75, ք․ Երևան</p>
               </div>
             </div><!-- End Info Item -->
 
